// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav should match the snapshot 1`] = `
<nav
  className="nav-container"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="fav-btn-group"
    to="/favorites"
  >
    <div
      className="fav-btn-nav"
    >
      <span
        className="num-favs"
      >
        0
      </span>
      <p
        className="favorites-text"
      >
        FAVORITES
      </p>
    </div>
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="login-btn"
    to="/login"
  >
    <img
      alt="Click here to login"
      className="login-icon"
      src="margot.png"
    />
    <p
      className="login-text"
    >
      LOGIN
    </p>
  </NavLink>
</nav>
`;

exports[`Nav should toggle login text depending on user login status 1`] = `
<nav
  className="nav-container"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="fav-btn-group"
    to="/favorites"
  >
    <div
      className="fav-btn-nav"
    >
      <span
        className="num-favs"
      >
        0
      </span>
      <p
        className="favorites-text"
      >
        FAVORITES
      </p>
    </div>
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="login-btn"
    to="/login"
  >
    <img
      alt="Click here to login"
      className="login-icon"
      src="margot.png"
    />
    <p
      className="login-text"
    >
      LOGOUT
    </p>
  </NavLink>
</nav>
`;
